# slam_backend_solver

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  curve_fitting_test.cc  pose_graph_optimization.cc  pose_graph_optimization_test.cc  sparse_bundle_adjustment.cc
solver/: CMakeLists.txt  base_edge.hh  base_solver.cc  base_solver.hh  base_vertex.hh  edge.cc  edge.hh  eigen_types.h  inverse_depth_vertex.hh  minimizer_dog_leg.cc  minimizer_dog_leg.hh  minimizer_levenberg_marquardt.cc  minimizer_levenberg_marquardt.hh  plain_solver.cc  plain_solver.hh  point3d_vertex.hh  pose3d_vertex.cc  pose3d_vertex.hh  problem.cc  problem.hh  relative_pose3d_edge.cc  relative_pose3d_edge.cpp  relative_pose3d_edge.h  relative_pose3d_edge.hh  reprojection_edge.cc  reprojection_edge.hh  sparse_cholesky_solver.cc  sparse_cholesky_solver.hh  sparse_schur_solver.cc  sparse_schur_solver.hh  vertex.cc  vertex.hh
test/: CMakeLists.txt  cholesky_test.cc  curve_fitting_test.cc  marginalization_test.cc  pose_graph_optimization_test.cc  sparse_bundle_adjustment_test.cc
